--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype.html>
+<!doctype html>
 <html lang = "en">
     <head>
         <meta charset = "UTF-8">
@@ -11,11 +11,11 @@
         <!-- our script file -->
         <script src="js/app.js"></script>
     </head>
-    <body ng-app = "">
+    <body ng-app = "SignUp" ng-controller="FormController">
         <h1>Sign Up</h1>
         <p>Our Service is fun and awesome, but you must be 13 years old to join</p>
 
-        <form name = "signUpForm" novalidate>
+        <form name = "signUpForm" ng-submit="submit()" novalidate>
 
 
 
