--- a/index.html
+++ b/index.html
@@ -17,7 +17,21 @@
 
         <form name = "signUpForm" ng-submit="submit()" novalidate>
 
-
+            <div class="form-group">
+                <label for="emailInput">Email</label>
+                <input type="email"
+                       class="form-control"
+                       ng-model="user.email"
+                       name="emailInput"
+                       id="emailInput"
+                       required />
+                <p class="validation-error" ng-if="signUpForm.emailInput.$error.required">
+                    An email address is required
+                </p>
+                <p class="validation-error" ng-if="signUpForm.emailInput.$error.email">
+                    The email you provided is invalid
+                </p>
+            </div>
 
             <div class = "form-group">
                 <button>Reset</button>
