--- a/index.html
+++ b/index.html
@@ -11,14 +11,23 @@
         <!-- our script file -->
         <script src="js/app.js"></script>
     </head>
-    <body ng-app = "">
+    <body ng-app = "test">
         <h1>Sign Up</h1>
         <p>Our Service is fun and awesome, but you must be 13 years old to join</p>
 
         <form name = "signUpForm" novalidate>
-
-
-
+            <div class="form-group">
+                <label for="fname">First Name:</label>
+                <input type="text" class="form-control" id="fname"
+                name="fname" ng-model="user.fname"/>
+            </div>
+            <div class="form-group">
+                <label for="lname">Last Name:</label>
+                <input type="text" class="form-control" id="lname"
+                        name="lname" placeholder="Your Last Name" ng-model="user.lname" required/>
+                <p class="validation-error"
+                    ng-if="signUpForm.lname.$dirty && signUpForm.lname.$error.required">Last Name is required.</p>
+            </div>
             <div class = "form-group">
                 <button>Reset</button>
                 <button ng-disabled = "signUpForm.$invalid">Submit</button>
